 * Page previews now pass additional HTTP headers, to simulate the page being viewed by the logged-in user and avoid clashes with middleware (Robert Rollins)
 * Added back buttons to page delete and unpublish confirmation screens (Matt Westcott)
 * Recognise Flickr embed URLs using HTTPS (Danielle Madeley)
 * Fix: Email templates and document uploader now support custom `STATICFILES_STORAGE` (Jonny Scholes)
 * Fix: Removed alignment options (deprecated in HTML and not rendered by Wagtail) from `TableBlock` context menu (Moritz Pfeiffer)
 * Fix: Fixed incorrect CSS path on ModelAdmin's "choose a parent page" view
 * Fix: Prevent empty redirect by overnormalisation (Franklin Kingma, Ludolf Takens)
 * Fix: "Remove link" button in rich text editor didn't trigger "edit" event, leading to the change to sometimes not be persisted (Matt Westcott)
 * Fix: `RichText` values can now be correctly evaluated as booleans (Mike Dingjan, Bertrand Bordage)
 * Fix: wagtailforms no longer assumes an .html extension when determining the landing page template filename (kakulukia)
 * Fix: Fixed styling glitch on bi-colour icon + text buttons in Chrome (Janneke Janssen)
 * Fix: StreamField can now be used in an InlinePanel (Gagaro)


1.5.3 (18.07.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Pin html5lib to version 0.999999 to prevent breakage caused by internal API changes (Liam Brenner)


1.5.2 (08.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fixed regression in 1.5.1 on editing external links (Stephen Rice)


1.5.1 (07.06.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
 * Fix: Removing embedded media from rich text by mouse click action now gets correctly registered as a change to the field (Loic Teixeira)
 * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Gagaro)
 * Fix: Rich text editor is no longer broken in settings (Matt Westcott)